--- a/E_commerce/E_commerce/templates/404.html
+++ b/E_commerce/E_commerce/templates/404.html
@@ -4,19 +4,26 @@
 
 <style>
     .errorpage {
-        background-image: url("{% static 'img/404.jpeg' %}");
+        background-image: url("{% static 'img/404error.png' %}");
         background-size: cover;
-        background-position: center;
-        /* Additional styling for the div */
+        background-position: center;    
         width: 100%;
-        height: 100%;
-        justify-content: center;
+        min-height:100vh;
+        color: white;
+        display: flex;
+        flex-direction: column; /* Set flex-direction to column */
         align-items: center;
-        text-align: center;
-        }
+        justify-content: center;
+        text-align: center; 
+    }
+
+    .errorpage h1 {
+        margin-bottom: 20px; /* Add margin bottom to create space between the headings */
+    }
+
 </style>
 <div class="errorpage">
-   <h1>OOPS! Page Not Found </h1>
-   <h2>Go Back To Home Page <a href="/" ><button class="btn btn-success">Go Home</button></a></h2>
+   <h1>OOPS! Page Not Found</h1>
+   <h1>Go Back To Home Page <a href="/" ><button class="btn btn-success">Go Home</button></a></h1>
 </div>
 {% endblock body %}
