--- a/E_commerce/E_commerce/templates/base.html
+++ b/E_commerce/E_commerce/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PS-Thakker</title>
+    <title>PS-Thakkar</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'bootstrap-5/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static '/fontawesome/css/fontawesome.min.css' %}">
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- Logo -->
-            <a class="navbar-brand" href="/"><img src="{% static 'img/logo.png'%}" class="logoimg" alt=""></a>
+            <a class="navbar-brand" href="/"><img src="{% static 'img/logo1.png'%}" class="logoimg" alt=""></a>
 
             <!-- Toggle button for mobile view -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -74,6 +74,7 @@
                         <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                             <li><a class="dropdown-item" href="/signin">Sign In</a></li>
                             <li><a class="dropdown-item" href="/signup">Sign Up</a></li>
+                            <li><a class="dropdown-item" href="/signout">Sign out</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
