--- a/E_commerce/E_commerce/templates/index.html
+++ b/E_commerce/E_commerce/templates/index.html
@@ -33,21 +33,39 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
-<h1>Products</h1>
-
-
+<container class="productcontainer">
+    <h1>Products</h1>
+    <main class="main bd-grid" id="product-container">
+    </main>
+</container>
 <script>
     fetch('/api/product/')
         .then(response => response.json())
         .then(data => {
-            const productTableBody = document.getElementById('product-table-body');
+            const productContainer = document.getElementById('product-container');
             data.forEach(product => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                        <td>${product.name}</td>
-                        <td>${product.price}</td>
-                    `;
-                productTableBody.appendChild(row);
+                const card = document.createElement('article');
+                card.className = 'card';
+                card.innerHTML = `
+                <a href="/product/${product.product_id}">
+                    <div class="card__img">
+                        <img src="${product.img}" alt="${product.name}">
+                    </div>
+                    <div class="card__precis">
+                        <h3>${product.name}</h3>
+                    </div>
+                    <div class="card__name">
+                        <p>${product.name}</p>
+                    </div>
+                    <div class="card__precis">
+                        <a href="" class="card__icon"> <i class="bi bi-heart-fill"></i></a>
+                        <div>
+                            <span class="card__preci card__preci--now">${product.price}</span>
+                        </div>
+                        <a href="" class="card__icon"><i class="bi bi-cart-check-fill"></i></a>
+                    </div></a>
+                `;
+                productContainer.appendChild(card);
             });
         })
         .catch(error => console.error('Error fetching products:', error));
