--- a/E_commerce/E_commerce/templates/productdetail.html
+++ b/E_commerce/E_commerce/templates/productdetail.html
@@ -14,18 +14,13 @@
             <h1 id="product-name"></h1>
             <p>Category: <span id="product-category"></span></p>
             <p>Description: <span id="product-description"></span></p>
-            <p>Price: <span id="product-price"></span></p>
+            <p>Price: ₹<span id="product-price"></span></p>
             <a href=""><button class="btn btn-danger">Add to WishList <i class="bi bi-heart-fill"></i></button></a>
-            <a href=""><button class="btn btn-success">Add to Cart <i class="bi bi-cart-check-fill"></i></button></a>
+            <a href="" class="m-3"><button class="btn btn-success">Add to Cart <i class="bi bi-cart-check-fill"></i></button></a>
         </div>
     </div>
-    <div id="product-detail">
-        <h1 id="product-name"></h1>
-        <p id="product-description"></p>
-        <p id="product-price"></p>
-        <!-- Add more placeholders for other product details if needed -->
-    </div>
     <container class="productcontainer">
+        <h3 class="m-5">You may Like This!</h3>
         <main class="main bd-grid" id="product-container">
         </main>
     </container>
@@ -47,7 +42,7 @@
                 const category = await getCat(data.category);
                 document.getElementById('product-name').innerText = data.name;
                 document.getElementById('product-description').innerText = data.disc;
-                document.getElementById('product-price').innerText = '₹' + data.price;
+                document.getElementById('product-price').innerText = data.price;
                 document.getElementById('product-category').innerText = category;
                 document.getElementById('product-img').src = data.img;
             })
@@ -64,24 +59,24 @@
                     const card = document.createElement('article');
                     card.className = 'card';
                     card.innerHTML = `
-                <a href="/product/${product.product_id}">
-                    <div class="card__img">
-                        <img src="${product.img}" alt="${product.name}">
-                    </div>
-                    <div class="card__precis">
-                        <h3>${product.name}</h3>
-                    </div>
-                    <div class="card__name">
-                        <p>${product.name}</p>
-                    </div>
-                    <div class="card__precis">
-                        <a href="" class="card__icon"> <i class="bi bi-heart-fill"></i></a>
-                        <div>
-                            <span class="card__preci card__preci--now">${product.price}</span>
+                    <a href="/product/${product.product_id}">
+                        <div class="card__img">
+                            <img src="${product.img}" alt="${product.name}">
                         </div>
-                        <a href="" class="card__icon"><i class="bi bi-cart-check-fill"></i></a>
-                    </div></a>
-                `;
+                        <div class="card__precis">
+                            <h3>${product.name}</h3>
+                        </div>
+                        <div class="card__name">
+                            <p>${product.name}</p>
+                        </div>
+                        <div class="card__precis">
+                            <a href="/wishlist/${product.product_id}" class="card__icon btn btn-danger"> <i class="bi bi-heart"></i></a>
+                            <div>
+                                <span class="card__preci card__preci--now">₹${product.price}</span>
+                            </div>
+                            <a href="" class="card__icon  btn btn-success"><i class="bi bi-cart-check"></i></a>
+                        </div></a>
+                    `;
                     productContainer.appendChild(card);
                 });
             })
