--- a/E_commerce/E_commerce/templates/contactus.html
+++ b/E_commerce/E_commerce/templates/contactus.html
@@ -12,7 +12,7 @@
 </style>
 <div class="me-5">
   <h1 class="text-center p-3
-    ">contact US</h1>
+    ">Contact US</h1>
   <form class="row g-3 m-5" method="post">
     {% csrf_token %}
     <div class="col-md-6 my-2">
