--- a/E_commerce/E_commerce/templates/productdetail.html
+++ b/E_commerce/E_commerce/templates/productdetail.html
@@ -16,6 +16,7 @@
             <p>Description: <span id="product-description"></span></p>
             <p>Price: ₹<span id="product-price"></span></p>
             <a href=""><button class="btn btn-danger">Add to WishList <i class="bi bi-heart-fill"></i></button></a>
+            
             <a href="" class="m-3"><button class="btn btn-success">Add to Cart <i class="bi bi-cart-check-fill"></i></button></a>
         </div>
     </div>
@@ -25,7 +26,7 @@
         </main>
     </container>
     <script>
-        async function getCat(data) {
+        async function getCategoryName(data) {
             try {
                 const response = await fetch(data);
                 const value = await response.json();
@@ -39,7 +40,7 @@
         fetch('/api/product/{{productid}}')
             .then(response => response.json())
             .then(async data => {
-                const category = await getCat(data.category);
+                const category = await getCategoryName(data.category);
                 document.getElementById('product-name').innerText = data.name;
                 document.getElementById('product-description').innerText = data.disc;
                 document.getElementById('product-price').innerText = data.price;
