--- a/E_commerce/E_commerce/templates/profile.html
+++ b/E_commerce/E_commerce/templates/profile.html
@@ -1,17 +1,52 @@
 {% extends "base.html" %} {% block body %}
+<style>
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        strong {
+            font-weight: bold;
+        }
+</style>
 
 <body>
     <div class="container">
-        <h1 class="text-center">Profile</h1>
         <div class="profile">
-            <h2>First name:{{user.name}}</h2>
-            <h2>Last name:{{last_name}}</h2>
-            <h2>Username:{{username}}</h2>
-            <h2>Email id:{{user.email}}</h2>
-            <h2>phone no:{{user.phone}}</h2>
-            <h2>Address:{{user.Address}}</h2>
+            <h1>User Details</h1>
+            <ul>
+                {% for user in myuser %}
+                    <li><strong>User ID:</strong> {{ user.id }}</li>
+                    <li><strong>Username:</strong> {{ user.username }}</li>
+                    <li><strong>First Name:</strong> {{ user.first_name }}</li>
+                    <li><strong>Last Name:</strong> {{ user.last_name }}</li>
+                    <li><strong>Email:</strong> {{ user.email }}</li>
+                    <li><strong>Is Active:</strong> {{ user.is_active }}</li>
+                    <li><strong>Last Login:</strong> {{ user.last_login }}</li>
+                    <li><strong>Date Joined:</strong> {{ user.date_joined }}</li>
+                    <li><strong>Phone:</strong> {{ user.phone }}</li>
+                    <li><strong>Address:</strong> {{ user.Address }}</li>
+                {% endfor %}
+            </ul>
         </div>
-
     </div>
 </body>
 
