--- a/E_commerce/E_commerce/static/css/style.css
+++ b/E_commerce/E_commerce/static/css/style.css
@@ -306,7 +306,29 @@ a {
     border-radius: 15%;
 }
 
-
+/* ======================cart======================= */
+  
+.card {
+    background-color: #f8f9fa;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    align-items: start;
+}
+.cartprodname{
+    margin-left:3rem ;
+}
+.quantity-selector{
+    justify-content: center;
+}
+.card-img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+/* .form-control {
+    width: 20%;
+} */
 /* ======================footer===================== */
 
 footer {
