--- a/E_commerce/E_commerce/templates/base.html
+++ b/E_commerce/E_commerce/templates/base.html
@@ -9,9 +9,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'bootstrap-5/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static '/fontawesome/css/fontawesome.min.css' %}">
-    <!-- Option 1: Include in HTML -->
+    <!-- Bootstrap cdn icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <!-- Custom css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- jquery -->
+    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
+
+
+
+
 </head>
 
 <body>
@@ -87,8 +95,8 @@
                         </button></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/cart"><button class="icons d-flex">
-                            <i class="bi bi-cart-check-fill"></i> 12
+                        <a class="nav-link " href="/cart"><button class="icons d-flex">
+                            <i class="bi bi-cart-check-fill"></i> <span id="cart_quantity">{{cart|length}}</span>
                         </button></a>
                     </li>
                 </ul>
@@ -102,9 +110,9 @@
     </footer>
 
     <!-- Bootstrap JS and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha384-GLhlTQ8iN1lYiVm3BOFkkfNdu1+KODLw/JTl/S5OMETJ65ILrZyD+L3kM6d5uMz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <script src="{% static 'bootstrap-5/js/bootstrap.bundle.min.js' %}"></script>
         <!-- for category -->
     <script src="{% static 'js/categories.js' %}"></script>
