--- a/E_commerce/E_commerce/templates/cart.html
+++ b/E_commerce/E_commerce/templates/cart.html
@@ -5,11 +5,33 @@
     <h1>Cart</h1>
     <main class="main bd-grid" id="product-container">
         <div class="container mt-5">
-            <div class="quantity-selector">
-                <button class="btn btn-secondary quantity-btn bg-danger" id="decrement-btn">-</button>
-                <input type="number" class="form-control" id="quantity-input" value="1" min="1">
-                <button class="btn btn-secondary quantity-btn bg-success" id="increment-btn">+</button>
-            </div>
+            {% for product in cart_products %}
+            <ul class="list-unstyled">
+                <li class="mb-4">
+                    <div class="card p-4">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <div class="d-flex align-items-center">
+                                <img class="card-img" src="../media/{{product.img}}" alt="Product Image">
+                                <span class="font-weight-bold cartprodname">{{product.name}}</span>
+                            </div>
+
+                            <div class="quantity-selector">
+                                <button class="btn btn-secondary quantity-btn bg-danger" id="decrement-btn">-</button>
+                                <input type="number" class="form-control" id="quantity-input" value="1" min="1">
+                                <button class="btn btn-secondary quantity-btn bg-success" id="increment-btn">+</button>
+                            </div>
+                            <!-- <div class="d-flex align-items-center">
+                                <button class="btn btn-warning mr-2">-</button>
+                                <span class="font-weight-bold mr-2">1</span>
+                                <button class="btn btn-warning mr-2">+</button>
+                            </div> -->
+                            <span class="font-weight-bold">{{product.price}}</span>
+                            <button class="btn btn-danger m-5">Delete</button>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            {% endfor %}
         </div>
     </main>
 </container>
