--- a/E_commerce/E_commerce/templates/productdetail.html
+++ b/E_commerce/E_commerce/templates/productdetail.html
@@ -17,7 +17,7 @@
             <p>Price: ₹<span id="product-price"></span></p>
             <a href=""><button class="btn btn-danger">Add to WishList <i class="bi bi-heart-fill"></i></button></a>
             
-            <a href="" class="m-3"><button class="btn btn-success">Add to Cart <i class="bi bi-cart-check-fill"></i></button></a>
+            <a href="" class="m-3 btn btn-success" id="add-cart" data-productid="{{ productid }}">Add to Cart<i class="bi bi-cart-check-fill"></i></a>
         </div>
     </div>
     <container class="productcontainer">
@@ -75,7 +75,7 @@
                             <div>
                                 <span class="card__preci card__preci--now">₹${product.price}</span>
                             </div>
-                            <a href="" class="card__icon  btn btn-success"><i class="bi bi-cart-check"></i></a>
+                            <a href="" class="card__icon  btn btn-success"  id="add-cart"><i class="bi bi-cart-check"></i></a>
                         </div></a>
                     `;
                     productContainer.appendChild(card);
@@ -83,4 +83,26 @@
             })
             .catch(error => console.error('Error fetching products:', error));
     </script>
+    <script>            
+    $(document).on('click', '#add-cart', function(e) {
+        e.preventDefault()
+        var product_id = $(this).data('productid');
+        $.ajax({
+            type: 'POST',
+            url: '{% url 'cart_add' %}',
+            data: {
+                product_id: product_id, 
+                // product_id: 2, 
+                csrfmiddlewaretoken: '{{ csrf_token }}', 
+                action: 'post'
+            },
+            success: function(json) {
+                // console.log(json);
+                document.getElementById('cart_quantity').textContent=json.cart_quantity
+            },
+            error: function(xhr, errmsg, err) {
+                console.log(errmsg); // Log the error message to the console
+            }
+        });
+    });</script>
     {% endblock body %}
