--- a/E_commerce/E_commerce/templates/products.html
+++ b/E_commerce/E_commerce/templates/products.html
@@ -30,12 +30,32 @@
                         <div>
                             <span class="card__preci card__preci--now">₹${product.price}</span>
                         </div>
-                        <a href="" class="card__icon  btn btn-success"><i class="bi bi-cart-check"></i></a>
+                        <a href="" class="card__icon  btn btn-success" id="add-cart"><i class="bi bi-cart-check"></i></a>
                     </div></a>
                 `;
                 productContainer.appendChild(card);
             });
         })
         .catch(error => console.error('Error fetching products:', error));
+
+        //if button press or not (cart)
+        $(document).on('click', '#add-cart', function(e) {
+        $.ajax({
+            type: 'POST',
+            url: '{% url 'cart_add' %}',
+            data: {
+                product_id: $(this).val(), // Using $(this) to get the value of the clicked element
+                csrfmiddlewaretoken: '{{ csrf_token }}', // Making sure to include quotes around '{{ csrf_token }}'
+                action: 'post'
+            },
+            success: function(json) {
+                console.log(json);
+            },
+            error: function(xhr, errmsg, err) {
+                console.log(errmsg); // Log the error message to the console
+            }
+        });
+    });
+
 </script>
 {% endblock body %}
