--- a/E_commerce/E_commerce/templates/index.html
+++ b/E_commerce/E_commerce/templates/index.html
@@ -1,6 +1,23 @@
 {% extends "base.html" %}
 {% load static %}
 {% block body %}
+{% if messages %}
+<div class="alert alert-primary" role="alert" id="messages-container">
+  {% for message in messages %}
+  {{ message }}
+  {% endfor %}
+</div>
+{% endif %}
+
+<script>
+  // Function to hide the messages container after 3 seconds
+  setTimeout(function() {
+    var messagesContainer = document.getElementById('messages-container');
+    if (messagesContainer) {
+      messagesContainer.style.display = 'none';
+    }
+  }, 3000); // 3000 milliseconds = 3 seconds
+</script>
 
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -33,41 +50,6 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
-<container class="productcontainer">
-    <h1>Products</h1>
-    <main class="main bd-grid" id="product-container">
-    </main>
-</container>
-<script>
-    fetch('/api/product/')
-        .then(response => response.json())
-        .then(data => {
-            const productContainer = document.getElementById('product-container');
-            data.forEach(product => {
-                const card = document.createElement('article');
-                card.className = 'card';
-                card.innerHTML = `
-                <a href="/product/${product.product_id}">
-                    <div class="card__img">
-                        <img src="${product.img}" alt="${product.name}">
-                    </div>
-                    <div class="card__precis">
-                        <h3>${product.name}</h3>
-                    </div>
-                    <div class="card__name">
-                        <p>${product.name}</p>
-                    </div>
-                    <div class="card__precis">
-                        <a href="/wishlist/${product.product_id}" class="card__icon btn btn-danger"> <i class="bi bi-heart"></i></a>
-                        <div>
-                            <span class="card__preci card__preci--now">₹${product.price}</span>
-                        </div>
-                        <a href="" class="card__icon  btn btn-success"><i class="bi bi-cart-check"></i></a>
-                    </div></a>
-                `;
-                productContainer.appendChild(card);
-            });
-        })
-        .catch(error => console.error('Error fetching products:', error));
-</script>
+{% include "productcomponent.html" %}
+
 {% endblock body %}
