--- a/E_commerce/E_commerce/templates/productfilter.html
+++ b/E_commerce/E_commerce/templates/productfilter.html
@@ -2,6 +2,24 @@
 {% load static %}
 {% block body %}
 <container class="productcontainer">
+    {% if messages %}
+<div class="alert alert-primary" role="alert" id="messages-container">
+  {% for message in messages %}
+  {{ message }}
+  {% endfor %}
+</div>
+{% endif %}
+
+<script>
+  // Function to hide the messages container after 3 seconds
+  setTimeout(function() {
+    var messagesContainer = document.getElementById('messages-container');
+    if (messagesContainer) {
+      messagesContainer.style.display = 'none';
+    }
+  }, 3000); // 3000 milliseconds = 3 seconds
+</script>
+
     <h1>Category: <span id="categoryname"></span></h1>
     <main class="main bd-grid" id="product-container">
     </main>
