--- a/E_commerce/E_commerce/templates/profile.html
+++ b/E_commerce/E_commerce/templates/profile.html
@@ -30,6 +30,24 @@
 
 <body>
     <div class="container">
+        {% if messages %}
+<div class="alert alert-primary" role="alert" id="messages-container">
+  {% for message in messages %}
+  {{ message }}
+  {% endfor %}
+</div>
+{% endif %}
+
+<script>
+  // Function to hide the messages container after 3 seconds
+  setTimeout(function() {
+    var messagesContainer = document.getElementById('messages-container');
+    if (messagesContainer) {
+      messagesContainer.style.display = 'none';
+    }
+  }, 3000); // 3000 milliseconds = 3 seconds
+</script>
+
         <div class="profile">
             <h1>User Details</h1>
             <ul>
