--- a/E_commerce/E_commerce/templates/base.html
+++ b/E_commerce/E_commerce/templates/base.html
@@ -81,7 +81,7 @@
                             {% if user.is_authenticated %}
                             <li><a class="dropdown-item" href="/profile">Profile</a></li>
                             <li><a class="dropdown-item" href="/order">Order</a></li>
-                            <li><a class="dropdown-item" href="/forgatepasswd">Change Passwoard</a></li>
+                            <li><a class="dropdown-item" href="/changepasswd">Change Passwoard</a></li>
                             <li><a class="dropdown-item" href="/signout">Sign out</a></li>
                             {% else %}
                             <li><a class="dropdown-item" href="/signin">Sign In</a></li>
