--- a/E_commerce/E_commerce/templates/index.html
+++ b/E_commerce/E_commerce/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body %}
 {% if messages %}
-<div class="alert alert-primary" role="alert" id="messages-container">
+<div class="alert alert-primary" role="alert" id="messages-container"  style="position: absolute;z-index: 1;width: 100%;">
   {% for message in messages %}
   {{ message }}
   {% endfor %}
