--- a/E_commerce/E_commerce/templates/productcomponent.html
+++ b/E_commerce/E_commerce/templates/productcomponent.html
@@ -35,9 +35,8 @@
         })
         .catch(error => console.error('Error fetching products:', error));
 </script>
-
 <script>
-       $(document).on('click', '#add-cart', function(e) {
+    $(document).on('click', '#add-cart', function (e) {
         e.preventDefault()
         var product_id = $(this).data('productid');
 
@@ -47,17 +46,18 @@
             data: {
                 // product_id: 2, 
                 product_id: product_id,
-                product_qty:1,
-                csrfmiddlewaretoken: '{{ csrf_token }}', 
+                product_qty: 1,
+                csrfmiddlewaretoken: '{{ csrf_token }}',
                 action: 'post'
             },
-            success: function(json) {
+            success: function (json) {
                 // console.log(json);
-                document.getElementById('cart_quantity').textContent=json.cart_quantity
+                document.getElementById('cart_quantity').textContent = json.cart_quantity
+                location.reload()
             },
-            error: function(xhr, errmsg, err) {
+            error: function (xhr, errmsg, err) {
                 console.log(errmsg); // Log the error message to the console
             }
         });
-    });</script>
+    });
 </script>
