--- a/E_commerce/E_commerce/templates/profile.html
+++ b/E_commerce/E_commerce/templates/profile.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %} {% block body %}
+{% extends "base.html" %} 
+{% load static }
+{% block body %}
 <style>
         .container {
-            max-width: 600px;
+            max-width: 700px;
             margin: 50px auto;
             padding: 20px;
             background-color: #fff;
@@ -64,6 +66,10 @@
                     <li><strong>Address:</strong> {{ user.Address }}</li>
                 {% endfor %}
             </ul>
+            <a href="{% url 'updateuser' %}" class="btn btn-success my-3">Update Profile</a>
+            <a href="{% url 'changepasswd' %}" class="btn btn-success my-3">Change Passwoard</a>
+            <a href="{% url 'deleteuser' %}" class="btn btn-danger my-3">Permanent Delete Account</a>
+            <a href="{% url 'sigout' %}" class="btn btn-secondary my-3">Sign-out</a>
         </div>
     </div>
 </body>
