add wishlist in cart app with login system

--- a/E_commerce/E_commerce/templates/base.html
+++ b/E_commerce/E_commerce/templates/base.html
@@ -91,8 +91,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><button class="icons">
-                           <i class="bi bi-heart-fill"></i>
+                        <a class="nav-link" href="/wishlist"><button class="icons d-flex">
+                           <i class="bi bi-heart-fill"></i><span id="wishlist_quantity">{{ wishlist|length }}</span>
                         </button></a>
                     </li>
                     <li class="nav-item">
